# ComfyUI-LumaAI-API

./: .gitignore  LICENSE  README.md  __init__.py  config.ini  pyproject.toml  requirements.txt
py/: imgbb_node.py  luma_nodes.py  lumaai_api_node.py  nodes.py
web/js/: previewVideo.js  showGenerationId.js
workflows/: AddAudio2Video.json  ExtendingGeneration.json  Image2Video.json  Ray2Text2Video.json  Text2Video.json  Upscale.json  char_ref.json  img_ref.json  modify_image.json  style_ref.json  text2img.json
